--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,12 @@
             <version>1.13.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13-beta-3</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
